# Vx

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  Proposal.md  README.md  ROADMAP.md  build.rs  build_ane_matmul.py  fix_tests_ast.py  libakar_rt.dylib  libnpu_dispatch.dylib  mlir_output.mlir  prompt.txt  refactor_ast.py  simd_test.vx  temp.ll  temp.mlir  temp_llvm.mlir  test.ak  test_output.txt  test_print.ll  test_print.mlir  test_print_llvm.mlir  test_tok  test_tok.c
.cargo/: config.toml
agents/: Coding.md  Proposals.md
benchmarks/: benchmark_scalar.vx  benchmark_simd.vx  benchmark_test.vx  llama2_100.vx  llama2_scaling.vx  matmul_execution.vx  run_benchmarks.sh
docs/: DEVELOPER_GUIDE.md  Proposal.md  architecture_executive_summary.md  ast_reference.md  comptime_implementation_plan.md  cross_module_compilation_plan.md  devex_implementation_plan.md  generics_design.md  git_cheatsheet.md  hardware_topology_plan.md  llama2_port_plan.md  npu_dispatch_plan.md  npu_hardware_dispatch.md  parallel_compiler_architecture.md  release_notes_v2.0.md  scalable_plugin_system.md  spawn_on.md  std_library_design.md  syntax.md  tensor_layout_conversions.md  testing_strategy.md  types.md
include/: vx_hardware_runtime.h
libraries/: benchmark.ak
runtime/: npu_dispatch.h  npu_dispatch.mm
scripts/: pre-commit.sh
src/: ast.rs  ast_printer.rs  borrow.rs  codegen.rs  error.rs  formatter.rs  gid.rs  hash.rs  hir.rs  jit.rs  lexer.rs  lib.rs  main.rs  melior_codegen.rs  metadata.rs  module_loader.rs  parallel_architecture_verifier.rs  parser.rs  pipeline.rs  registry.rs  sema.rs  (+2 more)
(+211 files in other folders)
