[package]
name = "vxc"
version = "0.1.0"
edition = "2021"
description = "A high-performance systems programming language built from the ground up for heterogeneous computing."
authors = ["Aditya"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hiraditya/Vx"
keywords = ["compiler", "heterogeneous", "mlir", "gpu", "npu"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "cargo-vx-bench"
path = "src/bin/cargo-vx-bench.rs"

[dependencies]
regex = "1.10"

[dev-dependencies]
proptest = "1.4"
rstest = "0.19"


