[package]
name = "Vx"
version = "2.0.0"
edition = "2021"
description = "A high-performance systems programming language built from the ground up for heterogeneous computing."
authors = ["Aditya"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hiraditya/Vx"
keywords = ["compiler", "heterogeneous", "mlir", "gpu", "npu"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "vxc"
path = "src/main.rs"

[lib]
name = "vxc"
path = "src/lib.rs"

[[bin]]
name = "cargo-vx-bench"
path = "src/bin/cargo-vx-bench.rs"

[dependencies]
rayon = "1.10"
regex = "1.10"
bytemuck = { version = "1.15", features = ["derive"] }
once_cell = "1.19"
rustc-hash = "2.0"
petgraph = "0.6.5"
vx_std_core = { path = "stdlib/rust_core" }

[dev-dependencies]

proptest = "1.4"
rstest = "0.19"

[workspace]
members = [
    "stdlib/rust_core"
]
